[project]
name = "immport-cli"
description = "CLI tool for the unofficial ImmPort API Python client"
readme = "README.md"
authors = [
    { name = "Bjarne Hiller", email = "bjarne.hiller@uni-rostock.de" }
]
requires-python = ">=3.12"
dependencies = [
    "immport-client>=1.0.0",
    "requests>=2.33.1",
    "typer>=0.24.1",
]
dynamic = ["version"]

[project.scripts]
immport-cli = "immport_cli.cli:app"

[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
version_file = "src/immport_cli/_version.py"
